<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/title_color"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/email"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTextInputLayout"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/password"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button_bg"
        android:layout_below="@id/progressBar"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerUser"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button_bg"
        android:textStyle="bold"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="16dp" />
    <ImageView
        android:id="@+id/LoginImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img"
        android:scaleType="centerCrop"
        android:layout_below="@id/registerNow"
        android:layout_marginTop="16dp"
        android:padding="40dp"/>



    <TextView
        android:id="@+id/supportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Support"
        android:textStyle="bold"
        android:textColor="@color/title_color"
        android:layout_below="@id/LoginImage"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_marginBottom="76dp" />
</RelativeLayout>
